fix: update contact validation and improve localization

--- a/pages/get-help.html
+++ b/pages/get-help.html
@@ -110,7 +110,7 @@
                                 class="text-[10px] uppercase font-black text-gray-500 tracking-widest italic block mb-2"
                                 data-i18n="volunteers.name_label">Імя / Пазыўны</label>
                             <input type="text" name="user_name" data-i18n="[placeholder]volunteers.name_placeholder"
-                                placeholder="Імя / Пазыўны" required minlength="2" autocomplete="off"
+                                placeholder="Імя / Пазыўны (мін.2 сімвалы)" required minlength="2" autocomplete="off"
                                 class="w-full bg-black border border-white/10 p-4 text-white text-sm outline-none focus:border-red-600 transition-all font-bold uppercase">
                         </div>
 
@@ -140,7 +140,7 @@
                                 class="text-[10px] uppercase font-black text-gray-500 tracking-widest italic block mb-2"
                                 data-i18n="volunteers.needs_label">Сутнасць праблемы</label>
                             <textarea name="user_needs" data-i18n="[placeholder]volunteers.needs_placeholder"
-                                placeholder="Якая дапамога патрэбна?" required minlength="10"
+                                placeholder="Якая дапамога патрэбна? (мін.10 сімвалаў)" required minlength="10"
                                 class="w-full bg-black border border-white/10 p-4 text-white text-sm h-32 outline-none focus:border-red-600 transition-all font-bold resize-none uppercase"></textarea>
                         </div>
 
@@ -150,7 +150,7 @@
                                 data-i18n="volunteers.contact_label">Кантакт (Signal / Telegram)</label>
                             <input type="text" name="user_contact"
                                 data-i18n="[placeholder]volunteers.contact_placeholder"
-                                placeholder="Telegram @user або Signal" required
+                                placeholder="Telegram/Signal(@user) або Phone(+38..)" required
                                 class="w-full bg-black border border-white/10 p-4 text-white text-sm outline-none focus:border-red-600 transition-all font-bold uppercase">
                         </div>
 
