add script of analitics for all pages

--- a/pages/materials.html
+++ b/pages/materials.html
@@ -2,32 +2,33 @@
 <html lang="be">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6BJJXM6BRD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-6BJJXM6BRD');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title data-i18n="seo.materials.title">Матэрыялы | Knowledge Base | Bulwark Fund</title>
-
     <meta name="description" data-i18n="[content]seo.materials.description"
         content="База ведаў для беларускіх добраахвотнікаў: легалізацыя ва Украіне, аднаўленне дакументаў, бяспека і прававая абарона. | Knowledge base for Belarusian volunteers: legalization in Ukraine, document recovery, safety, and legal protection.">
-
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://bulwark-fund.org/pages/materials.html">
-
     <meta property="og:title" data-i18n="[content]seo.materials.og_title"
         content="Матэрыялы | База ведаў | Bulwark Fund">
-
     <meta property="og:description" data-i18n="[content]seo.materials.og_description"
         content="Юрыдычныя інструкцыі і карысныя матэрыялы па легалізацыі і абароне правоў добраахвотнікаў. Legal instructions and useful materials for volunteers.">
-
     <meta property="og:image" content="https://bulwark-fund.org/og-image.jpg">
     <meta property="og:site_name" data-i18n="[content]seo.materials.og_site_name" content="Bulwark Fund">
-
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" data-i18n="[content]seo.materials.twitter_title" content="Матэрыялы | Knowledge Base">
     <meta name="twitter:description" data-i18n="[content]seo.materials.twitter_description"
         content="Пакрокавыя інструкцыі па юрыдычных пытаннях для воінаў у эміграцыі. Step-by-step legal instructions for fighters in exile.">
     <meta name="twitter:image" content="https://bulwark-fund.org/og-image.jpg">
-
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="canonical" href="https://bulwark-fund.org/pages/materials.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
