refactor: externalize gallery strings to i18n keys and update JSON structure

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -42,10 +42,10 @@
     <load src="/src/partials/mobile-menu.html" />
 
     <main class="relative min-h-screen">
-        <section id="gallery" class="py-12 bg-black overflow-hidden">
+        <section id="gallery" class="py-10 bg-black overflow-hidden">
             <div class="container-custom">
-                <div class="mb-10">
-                    <span data-i18n="nav.gallery" class="text-red-600 font-black uppercase tracking-[0.3em] text-sm">
+                <div class="mb-8">
+                    <span data-i18n="gallery.label" class="text-red-600 font-black uppercase tracking-[0.3em] text-xl">
                         Галерэя
                     </span>
                 </div>
@@ -69,7 +69,7 @@
                         <div class="flex flex-col gap-4">
                             <div class="opacity-50">
                                 <p class="text-xs md:text-sm font-light leading-relaxed tracking-wide">
-                                    <span
+                                    <span data-i18n="gallery.copyright_label"
                                         class="text-red-600 font-bold uppercase mr-2 text-[10px] md:text-xs">Copyright:</span>
                                     <span data-i18n="gallery.copyright_text">
                                         Усе матэрыялы галерэі з'яўляюцца інтэлектуальнай уласнасцю Bulwark. Выкарыстанне
