feat: complete news archive, add SEO and update contact emails

--- a/index.html
+++ b/index.html
@@ -14,28 +14,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title data-i18n="seo.index.title">Bulwark Fund | Дапамога беларускім добраахвотнікам | Support for Belarusian
-        Fighters</title>
+    <title data-i18n="seo.news_full.title">Навіны (архіў) | Bulwark Fund | News Archive</title>
 
-    <meta name="description" data-i18n="[content]seo.index.description"
-        content="Благадзейны фонд Bulwark. Падтрымка беларускіх ваяроў ва Украіне: юрыдычная дапамога, рэабілітацыя, кадравы рэзерв. Далучайся! | Bulwark Charity Foundation. Support for Belarusian fighters in Ukraine: legal aid, rehabilitation, personnel reserve. Join us!">
+    <meta name="description" data-i18n="[content]seo.news_full.description"
+        content="Архіў навін і падзей фонду Bulwark. Сачыце за нашай дзейнасцю. | Archive of news and events of the Bulwark Fund. Follow our activities.">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://bulwark-fund.org/">
-    <meta property="og:title" data-i18n="[content]seo.index.og_title" content="Bulwark Fund | BY / EN">
-    <meta property="og:description" data-i18n="[content]seo.index.og_description"
-        content="Дапамога беларускім добраахвотнікам. Support for Belarusian fighters in Ukraine.">
+    <meta property="og:url" content="https://bulwark-fund.org/pages/news-full.html">
+    <meta property="og:title" data-i18n="[content]seo.news_full.og_title"
+        content="Навіны (архіў) | Bulwark Fund | News Archive">
+    <meta property="og:description" data-i18n="[content]seo.news_full.og_description"
+        content="Поўны архіў падзей і дзейнасці фонду. | Full archive of the fund's events and activities.">
     <meta property="og:image" content="https://bulwark-fund.org/og-image.jpg">
-    <meta property="og:site_name" data-i18n="[content]seo.index.og_site_name" content="Bulwark Fund">
+    <meta property="og:site_name" data-i18n="[content]seo.news_full.og_site_name" content="Bulwark Fund">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" data-i18n="[content]seo.index.twitter_title" content="Bulwark Fund | BY / EN">
-    <meta name="twitter:description" data-i18n="[content]seo.index.twitter_description"
-        content="Дапамога беларускім добраахвотнікам ва Украіне. Support for Belarusian fighters in Ukraine.">
+    <meta name="twitter:title" data-i18n="[content]seo.news_full.twitter_title"
+        content="Навіны (архіў) | Bulwark Fund | News Archive">
+    <meta name="twitter:description" data-i18n="[content]seo.news_full.twitter_description"
+        content="Усе навіны фонду ў адным месцы. | All fund news in one place.">
     <meta name="twitter:image" content="https://bulwark-fund.org/og-image.jpg">
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="canonical" href="https://bulwark-fund.org/">
+    <link rel="canonical" href="https://bulwark-fund.org/pages/news-full.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
