--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -74,8 +74,8 @@
                                     class="text-gray-500 text-[9px] md:text-[10px] uppercase font-black tracking-widest mb-1">
                                     Пошта</p>
                                 <a data-i18n="contacts.email_value;[href]contacts.email_href"
-                                    href="mailto:bfbulwark@gmail.com"
-                                    class="text-white text-base md:text-xl font-bold hover:text-red-600 transition-all break-all block leading-tight">bfbulwark@gmail.com</a>
+                                    href="mailto:info@bulwark-fund.org"
+                                    class="text-white text-base md:text-xl font-bold hover:text-red-600 transition-all break-all block leading-tight">info@bulwark-fund.org</a>
                             </div>
                             <div>
                                 <p data-i18n="contacts.phone_label"
