fix: restore head structure, icons and complete news-full SEO

--- a/pages/news-full.html
+++ b/pages/news-full.html
@@ -11,6 +11,8 @@
 
         gtag('config', 'G-6BJJXM6BRD');
     </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="seo.news_full.title">Навіны (архіў) | Bulwark Fund | News Archive</title>
 
     <meta name="description" data-i18n="[content]seo.news_full.description"
@@ -29,6 +31,9 @@
         content="Навіны (архіў) | Bulwark Fund | News Archive">
     <meta name="twitter:description" data-i18n="[content]seo.news_full.twitter_description"
         content="Усе навіны фонду ў адным месцы. | All fund news in one place.">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="canonical" href="https://bulwark-fund.org/pages/news-full.html">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 </head>
 
