feat: add SEO blocks for news-full and get-help pages across all locales

--- a/pages/get-help.html
+++ b/pages/get-help.html
@@ -2,7 +2,6 @@
 <html lang="be">
 
 <head>
-    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6BJJXM6BRD"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -13,9 +12,31 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title data-i18n="seo.get_help.title">Атрымаць дапамогу | Bulwark Fund | Get Help</title>
+
+    <meta name="description" data-i18n="[content]seo.get_help.description"
+        content="Дапамога беларускім добраахвотнікам і ветэранам ва Украіне: легалізацыя, прававы статус, рэабілітацыя. | Assistance to Belarusian volunteers and veterans in Ukraine: legalization, legal status, rehabilitation.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bulwark-fund.org/pages/get-help.html">
+    <meta property="og:title" data-i18n="[content]seo.get_help.og_title"
+        content="Атрымаць дапамогу | Bulwark Fund | Get Help">
+    <meta property="og:description" data-i18n="[content]seo.get_help.og_description"
+        content="Бяспечны канал сувязі для атрымання падтрымкі добраахвотнікам. | A secure communication channel for obtaining support for volunteers.">
+    <meta property="og:image" content="https://bulwark-fund.org/og-image.jpg">
+    <meta property="og:site_name" data-i18n="[content]seo.get_help.og_site_name" content="Bulwark Fund">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" data-i18n="[content]seo.get_help.twitter_title"
+        content="Атрымаць дапамогу | Bulwark Fund | Get Help">
+    <meta name="twitter:description" data-i18n="[content]seo.get_help.twitter_description"
+        content="Бяспечная сувязь і падтрымка нашых ваяроў. | Secure communication and support for our fighters.">
+    <meta name="twitter:image" content="https://bulwark-fund.org/og-image.jpg">
+
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="canonical" href="https://bulwark-fund.org/pages/get-help.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title data-i18n="get_help.page_title">Атрымаць дапамогу | Bulwark</title>
 </head>
 
 <body class="bg-black text-white antialiased">
@@ -176,6 +197,7 @@
     </main>
 
     <load src="/src/partials/footer.html" />
+    <script defer src="/_vercel/insights/script.js"></script>
     <script type="module" src="/src/main.js"></script>
 </body>
 
