seo: add meta tags and localized SEO keys for donate page
- Implemented full <head> block for donate.html with i18next support.
- Added  keys to be, uk, en, ru.
- Set bilingual values (BY|EN) for Belarusian locale to improve search visibility.

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -2,20 +2,41 @@
 <html lang="be">
 
 <head>
-    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6BJJXM6BRD"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
         gtag('config', 'G-6BJJXM6BRD');
     </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title data-i18n="seo.donate.title">Падтрымка беларускіх добраахвотнікаў | Дапамагчы Bulwark | Support Belarusian
+        Volunteers</title>
+
+    <meta name="description" data-i18n="[content]seo.donate.description"
+        content="Падтрымайце беларускіх добраахвотнікаў ва Украіне. Фінансавы ўнёсак, юрыдычная і псіхалагічная дапамога. | Support Belarusian volunteers in Ukraine. Financial contributions, legal and psychological aid.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bulwark-fund.org/pages/donate.html">
+    <meta property="og:title" data-i18n="[content]seo.donate.og_title"
+        content="Падтрымаць Bulwark Fund | Support Belarusian Fighters">
+    <meta property="og:description" data-i18n="[content]seo.donate.og_description"
+        content="Твая падтрымка — наша моц. Далучайся да дапамогі беларускім воінам. | Your support is our strength. Join the support for Belarusian fighters.">
+    <meta property="og:image" content="https://bulwark-fund.org/og-image.jpg">
+    <meta property="og:site_name" data-i18n="[content]seo.donate.og_site_name" content="Bulwark Fund">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" data-i18n="[content]seo.donate.twitter_title" content="Donate to Bulwark Fund | BY / EN">
+    <meta name="twitter:description" data-i18n="[content]seo.donate.twitter_description"
+        content="Зрабі свой унёсак у бяспеку беларускіх добраахвотнікаў. | Contribute to the security of Belarusian volunteers.">
+    <meta name="twitter:image" content="https://bulwark-fund.org/og-image.jpg">
+
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="canonical" href="https://bulwark-fund.org/pages/donate.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title data-i18n="support.page_title">Дапамагчы | Bulwark</title>
 </head>
 
 <body class="bg-black text-white antialiased">
