feat: update donate page and fix navigation paths

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -84,7 +84,7 @@
                         сродкі</h2>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                    <a href="/projects" target="_blank" rel="noopener noreferrer"
+                    <a href="/pages/projects.html" target="_blank" rel="noopener noreferrer"
                         class="group p-8 border border-white/10 bg-[#050505] hover:border-red-600/50 transition-all duration-500">
                         <i
                             class="fa-solid fa-scale-balanced text-2xl text-red-600 mb-6 group-hover:scale-110 transition-transform"></i>
@@ -95,7 +95,7 @@
                             class="text-[11px] text-gray-400 font-light leading-relaxed uppercase tracking-wider italic">
                             Легалізацыя ва Украіне і юрыдычны кансалтынг для воінаў.</p>
                     </a>
-                    <a href="/projects" target="_blank" rel="noopener noreferrer"
+                    <a href="/pages/projects.html" target="_blank" rel="noopener noreferrer"
                         class="group p-8 border border-white/10 bg-[#050505] hover:border-red-600/50 transition-all duration-500">
                         <i
                             class="fa-solid fa-brain text-2xl text-red-600 mb-6 group-hover:scale-110 transition-transform"></i>
@@ -106,7 +106,7 @@
                             class="text-[11px] text-gray-400 font-light leading-relaxed uppercase tracking-wider italic">
                             Дапамога пры ПТСР і адаптацыя воінаў да цывільнага жыцця.</p>
                     </a>
-                    <a href="/projects" target="_blank" rel="noopener noreferrer"
+                    <a href="/pages/projects.html" target="_blank" rel="noopener noreferrer"
                         class="group p-8 border border-white/10 bg-[#050505] hover:border-red-600/50 transition-all duration-500">
                         <i
                             class="fa-solid fa-seedling text-2xl text-red-600 mb-6 group-hover:scale-110 transition-transform"></i>
@@ -138,8 +138,8 @@
                             class="text-[10px] text-gray-500 uppercase mb-8 grow tracking-[0.2em] leading-relaxed max-w-xs">
                             Наўпроставая фінансавая падтрымка нашых абаронцаў праз хуткія плацяжы
                         </p>
-                        <a href="/#donate" target="_blank" rel="noopener noreferrer" data-i18n="donate_page.btn_donate"
-                            class="w-full bg-red-600 py-5 text-[11px] font-black uppercase tracking-[0.4em] hover:bg-white hover:text-black transition-all text-center">
+                        <a href="/index.html#donate" target="_blank" rel="noopener noreferrer" data-i18n="donate_page.btn_donate"
+                            class=" js-nav-link w-full bg-red-600 py-5 text-[11px] font-black uppercase tracking-[0.4em] hover:bg-white hover:text-black transition-all text-center">
                             Падтрымаць
                         </a>
                     </div>
@@ -153,7 +153,7 @@
                             class="text-[10px] text-gray-500 uppercase mb-8 grow tracking-[0.2em] leading-relaxed max-w-xs">
                             Картай онлайн / Перавод на рахунак / Крыптавалюты
                         </p>
-                        <a href="/contacts" target="_blank" rel="noopener noreferrer"
+                        <a href="/pages/contacts.html" target="_blank" rel="noopener noreferrer"
                             data-i18n="donate_page.btn_requisites"
                             class="w-full border border-red-600 py-5 text-[11px] font-black uppercase tracking-[0.4em]  hover:bg-red-600 transition-all text-center">
                             Глядзець рэквізіты
@@ -270,8 +270,7 @@
                         Стратэгічныя партнёры
                     </h5>
 
-                    <div id="partners-list" class="grid grid-cols-2 md:grid-cols-4 gap-4">
-    </div>
+                    <div id="partners-list" class="grid grid-cols-2 md:grid-cols-4 gap-4"></div>
                 </div>
 
 
