--- a/pages/donate.html
+++ b/pages/donate.html
@@ -106,7 +106,7 @@
                             class="text-[11px] text-gray-400 font-light leading-relaxed uppercase tracking-wider italic">
                             Дапамога пры ПТСР і адаптацыя воінаў да цывільнага жыцця.</p>
                     </a>
-                    <a href="/pages/pages/projects.html.html" target="_blank" rel="noopener noreferrer"
+                    <a href="/pages/projects.html" target="_blank" rel="noopener noreferrer"
                         class="group p-8 border border-white/10 bg-[#050505] hover:border-red-600/50 transition-all duration-500">
                         <i
                             class="fa-solid fa-seedling text-2xl text-red-600 mb-6 group-hover:scale-110 transition-transform"></i>
@@ -154,7 +154,7 @@
                             class="text-[10px] text-gray-500 uppercase mb-8 grow tracking-[0.2em] leading-relaxed max-w-xs">
                             Картай онлайн / Перавод на рахунак / Крыптавалюты
                         </p>
-                        <a href="/pages/pages/contacts.html.html" target="_blank" rel="noopener noreferrer"
+                        <a href="/pages/contacts.html.html" target="_blank" rel="noopener noreferrer"
                             data-i18n="donate_page.btn_requisites"
                             class="w-full border border-red-600 py-5 text-[11px] font-black uppercase tracking-[0.4em]  hover:bg-red-600 transition-all text-center">
                             Глядзець рэквізіты
