--- a/pages/donate.html
+++ b/pages/donate.html
@@ -140,7 +140,7 @@
                         </p>
                         <a href="/index.html#donate" target="_blank" rel="noopener noreferrer"
                             data-i18n="donate_page.btn_donate"
-                            class=" js-nav-link  js-nav-link w-full bg-red-600 py-5 text-[11px] font-black uppercase tracking-[0.4em] hover:bg-white hover:text-black transition-all text-center">
+                            class=" w-full bg-red-600 py-5 text-[11px] font-black uppercase tracking-[0.4em] hover:bg-white hover:text-black transition-all text-center">
                             Падтрымаць
                         </a>
                     </div>
